Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Price__c/fields/nickname__c.field-meta.xml
<CustomField>
    <fullName>nickname__c</fullName>
    <label>nickname</label>
    <type>TextArea</type>
</CustomField>