Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Price__c/fields/recurring_aggregate_usage__c.field-meta.xml
<CustomField>
    <fullName>recurring_aggregate_usage__c</fullName>
    <label>recurring.aggregate_usage</label>
    <type>TextArea</type>
</CustomField>