Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Price__c/fields/recurring_interval_count__c.field-meta.xml
<CustomField>
    <fullName>recurring_interval_count__c</fullName>
    <label>recurring.interval_count</label>
    <type>TextArea</type>
</CustomField>