Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Price__c/fields/recurring_meter__c.field-meta.xml
<CustomField>
    <fullName>recurring_meter__c</fullName>
    <label>recurring.meter</label>
    <type>TextArea</type>
</CustomField>