Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Price__c/fields/recurring_usage_type__c.field-meta.xml
<CustomField>
    <fullName>recurring_usage_type__c</fullName>
    <label>recurring.usage_type</label>
    <type>TextArea</type>
</CustomField>