Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Price__c/fields/Stripe_Currency__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Currency__c</fullName>
    <label>Stripe Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>