Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Price__c/fields/Stripe_Product__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Product</label>
    <referenceTo>Stripe_Product__c</referenceTo>
    <relationshipLabel>Stripe Prices</relationshipLabel>
    <relationshipName>Stripe_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>