Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Price__c/fields/unit_amount__c.field-meta.xml
<CustomField>
    <fullName>unit_amount__c</fullName>
    <label>unit_amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>